- CHG: BrAPI code refactor to use the cropgeeks brapi-java client library instead of the deprecated jhi-brapi library.